--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,14 +10,11 @@
     height: 100vh;
   }
   .game {
-    background-image: url(public/images/1.webp);
-    border: solid 10px blue;
+    background-image: url(../images/1.webp);
+    border: solid 15px rgb(84, 84, 255);
+    border-radius: 20px;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-position: center;
-  }
-  img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
+    
   }
