--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,14 +3,32 @@
   padding: 0;
   box-sizing: border-box;
 }
+@font-face {
+  font-family: elfboyclassic;
+  src: url(../fonts/Elfboyclassic.ttf);
+}
 .main {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
-.frame{
+.frame,
+.name {
   position: absolute;
+  z-index: 999;
+}
+.home-screen {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
+.name {
+  top: 20%;
 }
 .game {
   background-image: url(../images/backgroud.png);
@@ -18,3 +36,28 @@
   background-size: 100% 100%;
   background-position: center;
 }
+.btn {
+  margin-top: 50px;
+  height: 67px;
+  z-index: 999;
+  display: inline-block;
+  padding: 0 80px;
+  border-radius: 10px;
+  text-decoration: none;
+  box-sizing: border-box;
+  font-family: 'elfboyclassic';
+  font-size: 70px;
+  color: #ffffff;
+  text-align: center;
+  transition: all 0.2s;
+  background: #00226f;
+  cursor: pointer;
+  transform: scale(1);
+  transition: transform .2s;
+}
+.btn:hover {
+  transform: scale(1.05);
+  color: #00226f;
+  background-color: #ffffff;
+}
+
