--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,6 +7,9 @@
   font-family: elfboyclassic;
   src: url(../fonts/Elfboyclassic.ttf);
 }
+body{
+  background: #dff9ff;
+}
 .main {
   position: relative;
   display: flex;
@@ -56,7 +59,8 @@
   transform: scale(1);
   transition: transform 0.2s;
 }
-.btn:hover,.btn-back:hover {
+.btn:hover,
+.btn-back:hover {
   transform: scale(1.05);
   color: #00226f;
   background-color: #ffffff;
@@ -112,8 +116,17 @@
   right: 22%;
 }
 .btn-pause img,
-.btn-continue img {
+.btn-continue img,
+.btn-home img {
   width: 50px;
+}
+.btn-home {
+  display: none;
+  cursor: pointer;
+  z-index: 900;
+  position: absolute;
+  bottom: 15%;
+  right: 26%;
 }
 .high-score-screen {
   display: none;
